--- a/playbook-pingtest.yaml
+++ b/playbook-pingtest.yaml
@@ -6,8 +6,7 @@
     ping: 
 - 
  name: Create file
- host: target1
+ hosts: target1
  tasks:
   - name: Create file
     command: cat < testfile.xtx
-    test text
