--- a/playbook-pingtest.yaml
+++ b/playbook-pingtest.yaml
@@ -7,7 +7,7 @@
 - 
  name: Copy file with owner and permissions
  hosts: all
- copy:
+ fetch:
   remote src: root@target1:/AnsibleLab/testfile.txt
   remote dest: root@target2:/AnsibleLab/testfile.txt
     
