--- a/playbook-pingtest.yaml
+++ b/playbook-pingtest.yaml
@@ -7,7 +7,8 @@
 - 
  name: Copy file with owner and permissions
  hosts: all
- fetch:
-  remote src: root@target1:/AnsibleLab/testfile.txt
-  remote dest: root@target2:/AnsibleLab/testfile.txt
+ tasks:
+  fetch:
+   remote src: root@target1:/AnsibleLab/testfile.txt
+   remote dest: root@target2:/AnsibleLab/testfile.txt
     
