--- a/playbook-pingtest.yaml
+++ b/playbook-pingtest.yaml
@@ -10,6 +10,6 @@
  tasks:
   - copy:
     name: Copy file
-     src: root@target1:/AnsibleLab/testfile.txt
-     dest: root@target2:/AnsibleLab/testfile.txt
+     src: /AnsibleLab/testfile.txt
+     dest: /AnsibleLab/testfile.txt
     
